@@ -210,12 +210,12 @@
   :margin 2px 0px 0px 0px
   :overflow hidden
   :padding 4px
-//  :-moz-border-radius
-//    :bottomleft 8px
-//    :bottomright 8px
-//  :-webkit-border-radius
-//    :bottom-left-radius 8px
-//    :bottom-right-radius 8px
+  //  :-moz-border-radius
+  //    :bottomleft 8px
+  //    :bottomright 8px
+  //  :-webkit-border-radius
+  //    :bottom-left-radius 8px
+  //    :bottom-right-radius 8px
 
   input[type=text]
     :border 1px #cfcfcf solid
@@ -225,7 +225,7 @@
     :width 500px
   textarea
     :font-size 11px
-    :height 30px
+    :height 110px
     :padding 3px
     :width 500px
 
@@ -244,7 +244,7 @@
 
   dt
     :padding 0px
-    :margin 0px 0px 0px 36px
+    :margin -10px 0px 0px 36px
 
 #paginate
   :float right
