@@ -314,6 +314,30 @@ tt {
   margin: 2px 0px 0px 0px;
   overflow: hidden;
   padding: 4px; }
+  .comment input[type=text] {
+    border: 1px #cfcfcf solid;
+    color: grey;
+    font-size: 11px;
+    padding: 3px;
+    width: 500px; }
+  .comment textarea {
+    font-size: 11px;
+    height: 110px;
+    padding: 3px;
+    width: 500px; }
+  .comment .gravatar {
+    background: #f2f2f2;
+    float: left;
+    padding: 0px 10px 5px 0px; }
+  .comment .body {
+    display: inline;
+    font-size: 11px; }
+  .comment tt {
+    font-size: 10px;
+    color: #666666; }
+  .comment dt {
+    padding: 0px;
+    margin: -10px 0px 0px 36px; }
 
 #paginate {
   float: right;
